@@ -32,6 +32,7 @@ public:
 	float m_scatter;
 	BOOL m_fCollidable;
 	BOOL m_IsVisible;
+	BOOL m_fModify3DStereo;
 	};
 
 /////////////////////////////////////////////////////////////////////////////
@@ -186,6 +187,9 @@ public:
 	STDMETHOD(put_Friction)(/*[in]*/ float newVal);
 	STDMETHOD(get_Scatter)(/*[out, retval]*/ float *pVal);
 	STDMETHOD(put_Scatter)(/*[in]*/ float newVal);
+
+	STDMETHOD(get_Modify3DStereo)(/*[out, retval]*/ VARIANT_BOOL *pVal);
+	STDMETHOD(put_Modify3DStereo)(/*[in]*/ VARIANT_BOOL newVal);
 };
 
 #endif // !defined(AFX_RAMP_H__5EFEDEFB_5504_430A_B000_9B6D1903E3FC__INCLUDED_)
