@@ -1600,6 +1600,9 @@ typedef [uuid(D09B9F0E-C1AE-40dd-84D6-B1F74053AA8E)]
 		[propput, id(114), helpstring("property Friction")] HRESULT Friction([in] float newVal);
 		[propget, id(115), helpstring("property Scatter")] HRESULT Scatter([out, retval] float *pVal);
 		[propput, id(115), helpstring("property Scatter")] HRESULT Scatter([in] float newVal);
+
+		[propget, id(554), helpstring("property Modify3DStereo")] HRESULT Modify3DStereo([out, retval] VARIANT_BOOL *pVal);
+		[propput, id(554), helpstring("property Modify3DStereo")] HRESULT Modify3DStereo([in] VARIANT_BOOL newVal);
 	};
 
 	/////////////////////////////////////////////
